# 2017RobotCode

./: .project  CMakeLists.txt  README.md  build.gradle  makefile  settings.ini  settingsMecanum.ini  settingsTank.ini  smartdashboard.json
EctoPathTests/: Makefile
EctoPathTests/src/: EctoPath.cpp  EctoPath.h  EctoPathOptimize.cpp  EctoPathOptimize.h  main.cpp
include/spdlog/: spdlog.h
src/: Robot.cpp
src/Controllers/: EctoTalon.cpp  EctoTalon.h
src/Kinematics/: EctoKinematics.h  EctoKinematicsMecanum.cpp  EctoKinematicsMecanum.h  EctoKinematicsTank.cpp  EctoKinematicsTank.h
src/Math/: Point.cpp  Point.h  Translation2d.cpp  Translation2d.h  Twist2d.cpp  Twist2d.h
src/MotionProfiles/: MotionProfile.h  MotionProfileExecuter.cpp  MotionProfileExecuter.h  MotionProfilePoint.h  TrapezoidalProfile.cpp  TrapezoidalProfile.h
src/PIDs/: MecanumRotationRate.cpp  MecanumRotationRate.h  NavXRatePID.h  NavXYawPID.h  SimplePID.h
src/Sensors/: NavX.cpp  NavX.h  XRS450.cpp  XRS450.h
src/Subsystems/: EctoRobot.cpp  EctoRobot.h  EctoSubsystem.cpp  EctoSubsystem.h
src/Subsystems/DriveTrain/: DriveTrain.cpp  DriveTrain.h  EctoMecanum.cpp  EctoMecanum.h  EctoTank.cpp  EctoTank.h
src/Subsystems/Manager/: EctoInput.cpp  EctoInput.h  EctoMotors.cpp  EctoMotors.h  EctoPCM.cpp  EctoPCM.h  EctoSensors.cpp  EctoSensors.h
src/Subsystems/Mechanism/: EctoClimber.cpp  EctoClimber.h  EctoShooter.cpp  EctoShooter.h  GearReceiver.cpp  GearReceiver.h
src/Subsystems/Path/: EctoPath.cpp  EctoPath.h  Path.cpp  Path.h  PathParser.cpp  PathParser.h  PathRunner.cpp  PathRunner.h  PurePursuitRunner.cpp  PurePursuitRunner.h  Waypoint.cpp  Waypoint.h
src/Subsystems/Telemetry/: EctoTelemetry.h  TankState.cpp  TankState.h
src/Utilities/: EctoLog.cpp  EctoLog.h  EctoMath.cpp  EctoMath.h  EctoSettings.cpp  EctoSettings.h  EctoUtils.cpp  EctoUtils.h  FeedForwardCalculator.cpp  FeedForwardCalculator.h  MotorValues.cpp  MotorValues.h
